script: make script in script.js file

--- a/index.html
+++ b/index.html
@@ -5,20 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Futuristic AI Startup</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <header>
-        <h1 class="glow">FutureAI</h1>
+        <div class="logo">FutureAI</div>
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#features">Features</a></li>
+                <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </nav>
     </header>
+
 
     <section id="hero">
         <h2>Empowering the Future with AI</h2>
@@ -34,11 +41,20 @@
 
     <section id="features">
         <h2>Key Features</h2>
-        <ul>
-            <li>⚡ Advanced Machine Learning</li>
-            <li>🔍 Real-Time Data Analysis</li>
-            <li>🔐 Secure & Scalable Solutions</li>
+        <ul class="feature-list">
+            <li><span>⚡</span> Advanced Machine Learning</li>
+            <li><span>🔍</span> Real-Time Data Analysis</li>
+            <li><span>🔐</span> Secure & Scalable Solutions</li>
         </ul>
+    </section>
+
+    <section id="gallery">
+        <h2>AI in Action</h2>
+        <div class="gallery-container">
+            <div class="gallery-item"><img src="assets/images/image1.webp" alt="AI Image 1"></div>
+            <div class="gallery-item"><img src="assets/images/image2.webp" alt="AI Image 2"></div>
+            <div class="gallery-item"><img src="assets/images/image3.jpg" alt="AI Image 3"></div>
+        </div>
     </section>
 
     <section id="contact">
