--- a/index.html
+++ b/index.html
@@ -15,11 +15,6 @@
 </head>
 
 <body id="top">
-
-    <!--
-    - #HEADER
-  -->
-
     <header class="header" data-header>
         <div class="container">
 
@@ -88,11 +83,6 @@
 
     <main>
         <article>
-
-            <!--
-        - #HERO
-      -->
-
             <section class="hero" id="home">
                 <div class="container">
 
@@ -117,21 +107,12 @@
 
                 </div>
             </section>
-
-
-
-
-
-            <!--
-        - #ABOUT
-      -->
-
             <section class="section about" id="about">
                 <div class="container">
 
                     <figure class="about-banner">
                         <img src="./assets/images/about-banner.png" width="700" height="532" loading="lazy"
-                            alt="about banner" class="w-100 banner-animation">
+                            alt="about-banner" class="w-100 banner-animation">
                     </figure>
 
                     <div class="about-content">
